add analysis summary

--- a/currency performance analysis on the Naira.ipynb
+++ b/currency performance analysis on the Naira.ipynb
@@ -199,6 +199,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4965f9b0",
+   "metadata": {},
+   "source": [
+    "The above is the dataset of 3 columns and 15 rows of observations.  The variables are the Date, Naira per U.S dollar, end of period (end of period Rate), and Naira per U.S dollar, period average (Period Average).\n",
+    "\n",
+    "The \"Naira per U.S. Dollar, end of period\" reflects the exchange rate at the close of each month while the \"Naira per U.S. Dollar, period average\" represents the average exchange rate for the entire month."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "f6615830-6118-4e6d-98dc-fc8b3d6bb4bc",
@@ -345,31 +356,32 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c5bbd0c-c7f4-4111-82cf-523a4f3d0dd4",
    "metadata": {},
    "source": [
-    "From the above deductions, we see that the differences between the average values of \"Naira per U.S. Dollar, end of period\" and \"Naira per U.S. Dollar, period average\" suggest potential fluctuations or trends in the exchange rate over the given period.\n",
+    "From the above calculations, potential fluctuations or trends in the exchange rate over the given period is displayed by the differences between the average values of \"Naira per U.S. Dollar, end of period\" and \"Naira per U.S. Dollar, period average\".\n",
     "\n",
-    "End of Period Rate vs. Period Average:  The \"Naira per U.S. Dollar, end of period\" reflects the exchange rate at the close of each month while the \"Naira per U.S. Dollar, period average\" represents the average exchange rate for the entire month.\n",
+    "FLUCTUATIONS IN MONTHLY EXCHANGE RATES:  \n",
+    "The average of the \"End of period\" rate is =N=533.492133 to the Dollar while that of the \"Period average\" rate is =N=521.797357 to the Dollar, showing that the \"End of period\" rate is higher than the \"Period average\".  If there is a consistency where the end of period rate is higher than the period average, this could be an indication that the exchange rate tends to rise towards the end of each month.  On the contrary, if the \"End of period\" rate is consistently lower than the period average, it might suggest that the exchange rate tends to decrease towards the end of each month.  For this varaiation, the volatility of the exchange rate as well as its stability may need to be studied.\n",
     "\n",
-    "Fluctuations in Monthly Exchange Rates:  \n",
-    "- If the end of period rate is consistently higher than the period average, it might indicate that the exchange rate tends to rise towards the end of each month.\n",
-    "- Conversely, if the end of period rate is consistently lower than the period average, it might suggest that the exchange rate tends to decrease towards the end of each month.  For this varaiation, we look at the volatility of the exchange rate as well as its stability.\n",
+    "VOLATILITY AND STABILITY: \n",
+    "Larger differences between the \"End of period\" rate and the \"Period average\" could imply higher volatility in the exchange rate during those months.  On the other hand, smaller differences might indicate more stability in the exchange rate throughout the month.  From the economic point of view, what are those economic factors that could be responsible for this difference?\n",
     "\n",
-    "Volatility and Stability: \n",
-    "- Larger differences between the end of period rate and the period average could imply higher volatility in the exchange rate during those months.\n",
-    "- Smaller differences might indicate more stability in the exchange rate throughout the month.  Let's look at the economic factors that could be responsible for this difference.\n",
-    "\n",
-    "Economic Factors:  \n",
-    "- Significant differences between end of period rates and period averages could be influenced by various economic factors such as supply and demand dynamics, inflation, interest rates, government policies, geopolitical events, etc.\n",
-    "- Analyzing these factors alongside the exchange rate data can provide insights into the reasons behind the observed differences.\n",
+    "ECONOMIC FACTORS:  \n",
+    "Various economic factors such as inflation, supply and demand dynamics, interest rate, trade balance, geopolitical events, government policies, etc. could influence the significant differences between \"End of period\" rates and \"Period average\".   Analyzing these factors alongside the exchange rate data can provide insights into the reasons behind the observed differences.\n",
     "  \n",
-    "Trend Analysis:\n",
-    "- By examining the trends in the differences between end of period rates and period averages over time, we can identify whether the exchange rate is becoming more volatile, stabilizing, or following a specific pattern.\n",
+    "TREND ANALYSIS:\n",
+    "By examining the trends in the differences between \"End of period\" rates and \"Period averages\" over time, one can identify whether the exchange rate is becoming more volatile, stabilizing, or following a specific pattern.\n",
     "  \n",
-    "Risk Management:\n",
-    "- Understanding these differences can be crucial for businesses engaged in international trade or investment as it helps in assessing the potential risks associated with currency fluctuations and devising appropriate risk management strategies."
+    "RISK MANAGEMENT:\n",
+    "These differences are pivotal in helping make informed business decisions as understanding them can be crucial for businesses especially businesses involved in international trading activities or investment because it will help these businesses in assessing the potential risks associated with currency fluctuations and devising appropritae risk management strategies.\n",
+    "\n",
+    "SOLUTION:\n",
+    "Is it possible for the currency exchange rate to reduce?  Theoretically yes, but in reality, it is complex as a lot is involved including people, processes, activities, perceptions, technical know-how, personal interest, natural occurences, grit, continuity, etc.  However, for Nigeria to ensure stabilized and strong Naira, the government should encourage economic diversification, strong governmental policies on local and foreign trade, investment in research and development, strong enforcement in curbing corrupt practices, etc.\n",
+    "\n",
+    "For the complete article, please click https://t.ly/Pb94q"
    ]
   }
  ],
