--- a/currency performance analysis on the Naira.ipynb
+++ b/currency performance analysis on the Naira.ipynb
@@ -1,6 +1,48 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a35d4333",
+   "metadata": {},
+   "source": [
+    "**PROJECT TITLE**: Addressing the Nigerian currency exchange rate issues\n",
+    "**Date Created**: April 29 2024\n",
+    "**Project Type**: Research Project\n",
+    "**Author**: Aniekan Charles Ekanem\n",
+    "**Designation**: Data Analyst"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3aa80513",
+   "metadata": {},
+   "source": [
+    "**1 PROJECT INTRODUCTION**\n",
+    "This project is created to address the rising increase in the exchange rate of the Nigerian currency (The Naira) against the Dollar with possible approach into remedying this economic situation facing the country.\n",
+    "\n",
+    "This project is based on the writer's view and perspective of how he sees the economy and how it should be protected and hence is subject to criticism and any correction, addition, etc is welcome.\n",
+    "\n",
+    "Data used from this project is obtained from the National Bureau of Statistics and has the following characteristics:\n",
+    "\n",
+    "- The data is from a reliable source which makes it reliable.\n",
+    "- The data is from a first party source and is therefore original.\n",
+    "- The data is brief but comprehensive enough to answer the business question.\n",
+    "- The data is complete context wise.\n",
+    "- The data is cited making it more credible."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "55b15f87",
+   "metadata": {},
+   "source": [
+    "**2 LOADING THE DATASET**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e332a3c0-ae63-482f-9acb-c215183ee43c",
@@ -210,6 +252,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c49c48a1",
+   "metadata": {},
+   "source": [
+    "**3 VISUALIZING THE DATASET**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "f6615830-6118-4e6d-98dc-fc8b3d6bb4bc",
@@ -312,6 +363,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e318fe0c",
+   "metadata": {},
+   "source": [
+    "**4 DATA WRANGLING FOR ANALYTICS**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "023a7167-61db-489d-a1ec-9a6771e03687",
@@ -358,27 +418,36 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "a53e03bc",
+   "metadata": {},
+   "source": [
+    "**5 GENERAL ANALYSIS AND RECOMMENDATIONS**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "6c5bbd0c-c7f4-4111-82cf-523a4f3d0dd4",
    "metadata": {},
    "source": [
     "From the above calculations, potential fluctuations or trends in the exchange rate over the given period is displayed by the differences between the average values of \"Naira per U.S. Dollar, end of period\" and \"Naira per U.S. Dollar, period average\".\n",
     "\n",
-    "FLUCTUATIONS IN MONTHLY EXCHANGE RATES:  \n",
+    "**Fluctuations in monthly exchange rates**:  \n",
     "The average of the \"End of period\" rate is =N=533.492133 to the Dollar while that of the \"Period average\" rate is =N=521.797357 to the Dollar, showing that the \"End of period\" rate is higher than the \"Period average\".  If there is a consistency where the end of period rate is higher than the period average, this could be an indication that the exchange rate tends to rise towards the end of each month.  On the contrary, if the \"End of period\" rate is consistently lower than the period average, it might suggest that the exchange rate tends to decrease towards the end of each month.  For this varaiation, the volatility of the exchange rate as well as its stability may need to be studied.\n",
     "\n",
-    "VOLATILITY AND STABILITY: \n",
+    "**Volatility and Stability**: \n",
     "Larger differences between the \"End of period\" rate and the \"Period average\" could imply higher volatility in the exchange rate during those months.  On the other hand, smaller differences might indicate more stability in the exchange rate throughout the month.  From the economic point of view, what are those economic factors that could be responsible for this difference?\n",
     "\n",
-    "ECONOMIC FACTORS:  \n",
+    "**Economic Factors**:  \n",
     "Various economic factors such as inflation, supply and demand dynamics, interest rate, trade balance, geopolitical events, government policies, etc. could influence the significant differences between \"End of period\" rates and \"Period average\".   Analyzing these factors alongside the exchange rate data can provide insights into the reasons behind the observed differences.\n",
     "  \n",
-    "TREND ANALYSIS:\n",
+    "**Trend Analysis**:\n",
     "By examining the trends in the differences between \"End of period\" rates and \"Period averages\" over time, one can identify whether the exchange rate is becoming more volatile, stabilizing, or following a specific pattern.\n",
     "  \n",
-    "RISK MANAGEMENT:\n",
+    "**Risk Management**:\n",
     "These differences are pivotal in helping make informed business decisions as understanding them can be crucial for businesses especially businesses involved in international trading activities or investment because it will help these businesses in assessing the potential risks associated with currency fluctuations and devising appropritae risk management strategies.\n",
     "\n",
-    "SOLUTION:\n",
+    "**Solutions**:\n",
     "Is it possible for the currency exchange rate to reduce?  Theoretically yes, but in reality, it is complex as a lot is involved including people, processes, activities, perceptions, technical know-how, personal interest, natural occurences, grit, continuity, etc.  However, for Nigeria to ensure stabilized and strong Naira, the government should encourage economic diversification, strong governmental policies on local and foreign trade, investment in research and development, strong enforcement in curbing corrupt practices, etc.\n",
     "\n",
     "For the complete article, please click https://t.ly/Pb94q"
