updated the project title

--- a/currency performance analysis on the Naira.ipynb
+++ b/currency performance analysis on the Naira.ipynb
@@ -7,10 +7,10 @@
    "metadata": {},
    "source": [
     "**PROJECT TITLE**: Addressing the Nigerian currency exchange rate issues\n",
-    "**Date Created**: April 29 2024\n",
-    "**Project Type**: Research Project\n",
-    "**Author**: Aniekan Charles Ekanem\n",
-    "**Designation**: Data Analyst"
+    "- **Date Created**: April 29 2024\n",
+    "- **Project Type**: Research Project\n",
+    "- **Author**: Aniekan Charles Ekanem\n",
+    "- **Designation**: Data Analyst"
    ]
   },
   {
