add data source link

--- a/currency performance analysis on the Naira.ipynb
+++ b/currency performance analysis on the Naira.ipynb
@@ -20,11 +20,12 @@
    "metadata": {},
    "source": [
     "**1 PROJECT INTRODUCTION**\n",
+    "\n",
     "This project is created to address the rising increase in the exchange rate of the Nigerian currency (The Naira) against the Dollar with possible approach into remedying this economic situation facing the country.\n",
     "\n",
     "This project is based on the writer's view and perspective of how he sees the economy and how it should be protected and hence is subject to criticism and any correction, addition, etc is welcome.\n",
     "\n",
-    "Data used from this project is obtained from the National Bureau of Statistics and has the following characteristics:\n",
+    "Data used for this project is obtained from the [National Bureau of Statistics](https://nigerianstat.gov.ng/elibrary/read/1241365) and has the following characteristics:\n",
     "\n",
     "- The data is from a reliable source which makes it reliable.\n",
     "- The data is from a first party source and is therefore original.\n",
@@ -39,7 +40,7 @@
    "id": "55b15f87",
    "metadata": {},
    "source": [
-    "**2 LOADING THE DATASET**"
+    "**2 LOADING THE LIBRARIES AND DATASET**"
    ]
   },
   {
