Update currency performance analysis on the Naira.ipynb
Added Date Modified

--- a/currency performance analysis on the Naira.ipynb
+++ b/currency performance analysis on the Naira.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "**PROJECT TITLE**: Addressing the Nigerian currency exchange rate issues\n",
     "- **Date Created**: March 29 2024\n",
+    "_ **Date Modified**: April 12 2024\n",
     "- **Project Type**: Research Project\n",
     "- **Author**: Aniekan Charles Ekanem\n",
     "- **Designation**: Data Analyst"
