--- a/currency performance analysis on the Naira.ipynb
+++ b/currency performance analysis on the Naira.ipynb
@@ -452,7 +452,38 @@
     "**Solutions**:\n",
     "Is it possible for the currency exchange rate to reduce?  Theoretically yes, but in reality, it is complex as a lot is involved including people, processes, activities, perceptions, technical know-how, personal interest, natural occurences, grit, continuity, etc.  However, for Nigeria to ensure stabilized and strong Naira, the government should encourage economic diversification, strong governmental policies on local and foreign trade, investment in research and development, strong enforcement in curbing corrupt practices, etc.\n",
     "\n",
-    "For the complete article, please click https://t.ly/Pb94q"
+    "**Resources**:\n",
+    "Analysts Nairametrics. \"Naira losses 23% value in the third quarter of 2023\" Nairametrics, October 2023\n",
+    "[Naira losses 23% value in the third quarter of 2023](https://nairametrics.com/2023/10/04/naira-losses-23-value-in-the-third-quarter-of-2023/)\n",
+    "\n",
+    "Chen, James. \"What Is Money Laundering? The prevention of money laundering has become an international effort.\" Reviewed by Somer Anderson, Fact checked by Vikki Velasquez, Updated March 4, 2024. Retrieved from [Investopedia on money laundering by Chen, James Et al](https://www.investopedia.com/terms/m/moneylaundering.asp#:~:text=Money%20laundering%20is%20an%20illegal,launders%E2%80%9D%20it%20to%20look%20clean.)\n",
+    "\n",
+    "Hope Moses-Ashike. \"Clearing FX backlog seen restoring investors’ confidence, naira stability\", Business Day Nigeria, September 7, 2023\n",
+    "[Clearing FX backlog seen restoring investors’ confidence, naira stability](https://businessday.ng/news/article/clearing-fx-backlog-seen-restoring-investors-confidence-naira-stability/#:~:text=One%20of%20the%20measures%20of,to%20look%20for%20forex%20elsewhere)\n",
+    "\n",
+    "Malcolm Baker, and Jeffrey Wurgler. \"Investor Sentiment in the Stock Market.\" JOURNAL OF ECONOMIC PERSPECTIVES VOL. 21, NO. 2, SPRING 2007\n",
+    "[Investor Sentiment in the Stock Market](https://www.aeaweb.org/articles?id=10.1257/jep.21.2.129#:~:text=Investor%20sentiment%2C%20defined%20broadly%2C%20is,sentiment%20and%20quantify%20its%20effects.)\n",
+    "\n",
+    "Mary Izuaka. \"Nigerian govt announces ‘mechanical completion’ of Port Harcourt refinery\", December 21, 2023\n",
+    "[Nigerian govt announces ‘mechanical completion’ of Port Harcourt refinery](https://www.premiumtimesng.com/business/business-news/653144-nigerian-govt-announces-mechanical-completion-of-port-harcourt-refinery.html)\n",
+    "\n",
+    "Nigerian Economic Summit Group. \"Cost and Benefits of Fuel Subsidy in Nigeria\",  Tue, June 6, 2023\n",
+    "[Cost and Benefits of Fuel Subsidy in Nigeria](https://nesgroup.org/blog/Cost-and-Benefits-of-Fuel-Subsidy-in-Nigeria#:~:text=In%202022%20an%20estimated%20N2,to%20June%202023%2C%20while%20N2.)\n",
+    "\n",
+    "The Central Bank of Nigeria. \"Exchange Rates\", Exchange Rates by Weighted Average Rate - Nigerian Foreign Exchange Market (NFEM)\n",
+    "[Exchange Rates](https://www.cbn.gov.ng/rates/exchratebycurrency.asp)\n",
+    "\n",
+    "The Central Bank of Nigeria. \"Exchange rates.\" OpenData for Africa,  \n",
+    "[exchange rates](https://cb-nigeria.opendataforafrica.org/vpotohg/exchange-rates)\n",
+    "\n",
+    "Tony Fang, and Alex Wells. \"IZA DP No. 15334: \"Diaspora Economics.\" IZA Institute of Labor Economics, May 2022\n",
+    "[Diaspora Economics](https://www.iza.org/publications/dp/15334/diaspora-economics#:~:text=IZA%20DP%20No.,15334%3A%20Diaspora%20Economics&text=Diasporas%20are%20global%20communities%20of,area%20of%20research%20in%20economics.)\n",
+    "\n",
+    "The Punch Nigeria. \"FG eyes more revenue as US increases crude purchase\", April 15, 2023\n",
+    "[FG eyes more revenue as US increases crude purchase](https://punchng.com/fg-eyes-more-revenue-as-us-increases-crude-purchase/#:~:text=The%20United%20States%20has%20resumed,month%2C%20The%20PUNCH%20findings%20revealed.)\n",
+    "\n",
+    "The Punch Nigeria. \"IPPIS eliminated 70,000 ‘ghost’ workers, saved govt N220bn – FG\", June 23, 2022\n",
+    "[IPPIS eliminated 70,000 ‘ghost’ workers, saved govt N220bn – FG](https://punchng.com/ippis-eliminated-70000-ghost-workers-saved-govt-n220bn-fg/)\n"
    ]
   }
  ],
